--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .calculadora {
-    width: 30%;
+    width: 60%;
     margin: 2rem auto;
 }
 
@@ -54,7 +54,7 @@ body {
     width: 22%;
     color: var(--body-color);
     font-weight: bold;
-    padding: 18px;
+    padding: 25px 15px;
     margin: 0.2rem;
     flex-grow: 1;
     font-weight: bold;
